refactor with added repo scanner